fix: fix padding
.padding-big padding was too big for mobile screens.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ q:after {
 }
 
 .padding-big {
-    padding: 4rem 4rem;
+    padding: 4rem 3rem;
 }
 
 .flex-col-center {
